# tertuliando_ai_demo

./: .gitignore  README.md  config.py  embeddings_demonstration.ipynb  ia_y_fe.ipynb  ia_y_fe_full.ipynb  main.py  pyproject.toml  requirements.txt
src/: helpers.py
